--- a/src/components/home/_home.scss
+++ b/src/components/home/_home.scss
@@ -33,10 +33,16 @@
         
         @media only screen and (max-width: 1000px) {
             width: 95vw;
+            padding: 1rem;
         }
 
         .intro {
             width: 65%;
+            padding: 1rem;
+
+            @media only screen and (max-width: 1000px) {
+                width: 60%;
+            }
         }
 
         .card_container {
