--- a/src/css/main.css
+++ b/src/css/main.css
@@ -41,9 +41,14 @@
     box-shadow: 0px 0px 13px 0px #000000bf; }
     @media only screen and (max-width: 1000px) {
       #bussines_unit #banner {
-        width: 95vw; } }
+        width: 95vw;
+        padding: 1rem; } }
     #bussines_unit #banner .intro {
-      width: 65%; }
+      width: 65%;
+      padding: 1rem; }
+      @media only screen and (max-width: 1000px) {
+        #bussines_unit #banner .intro {
+          width: 60%; } }
     #bussines_unit #banner .card_container {
       width: auto;
       display: flex;
