--- a/src/components/home/_home.scss
+++ b/src/components/home/_home.scss
@@ -1,22 +1,23 @@
 #home_header {
-    width: 100vw;
-    height: 25vh;
+    width: 99vw;
+    height: 20vh;
     display: flex;
-        align-items: center;
+     align-items: center;
     background: linear-gradient(to top, #ffffffcb, #ffffffcb), url('/public/img/home_page/top_background.jpg');
-        background-color: gray;
-        background-size: cover;
+     background-color: gray;
+     background-size: cover;
 
     @media only screen and (max-width: 425px) {
         height: 20vh;
     }
 }
 
-#bussines_unit {
-    width: 100w;
+#bussines_units {
+    width: 99w;
     min-height: 20rem;
     display: flex;
-    justify-content: center;
+     justify-content: center;
+
     #banner {
         width: 75vw;
         margin: 2rem;
@@ -24,12 +25,12 @@
         color: white;
         display: flex;
         flex-direction: row;
-            justify-content: space-between;
-            align-items: center;
+         justify-content: space-between;
+         align-items: center;
         background: linear-gradient(to bottom, #181d5257, #181d52cc), url('/public/img/home_page/secondary_background.png');
-            background-color: #181D52;
-            background-repeat: no-repeat;
-            background-size: 12rem;
+         background-color: #181D52;
+         background-repeat: no-repeat;
+         background-size: 12rem;
         box-shadow: 0px 0px 13px 0px #000000bf;
         
         @media only screen and (max-width: 1500px) {
@@ -38,7 +39,7 @@
         }
 
         @media only screen and (max-width: 768px) {
-            width: 100vw;
+            width: 99vw;
             margin: .5rem;
         }
 
@@ -66,6 +67,12 @@
             @media only screen and (max-width: 425px) {
                 padding: 0;
             }
+
+            .secondary_p {
+                @media only screen and (max-width: 928px) {
+                    display: none;
+                }
+            }
         }
 
         .card_container {
@@ -91,11 +98,11 @@
                     width: 10rem;
                     height: 10rem;
                     display: flex;
-                        flex-direction: column;
-                        justify-content: center;
-                        align-items: center;
+                     flex-direction: column;
+                     justify-content: center;
+                     align-items: center;
 
-                        @media only screen and (max-width: 922px) {
+                        @media only screen and (max-width: 928px) {
                             width: 8rem;
                             height: 8rem;
                         }
@@ -132,4 +139,118 @@
         }
     }
 
+}
+
+.home_page_contact {
+    width: 99vw;
+    height: 30rem;
+    margin-top: 2rem;
+    display: flex;
+     justify-content: center;
+    background: url('/public/img/home_page/word_contact.png');
+     background-repeat: no-repeat;
+     background-position: right;
+     background-size: contain;
+
+    @media only screen and (max-width: 928px) {
+        height: 25rem;
+    }
+
+    @media only screen and (max-width: 720px) {
+        height: 20rem;
+        background-size: 15rem;
+    }
+
+    @media only screen and (max-width: 575px) {
+        background: linear-gradient(to bottom, #fffffff1, #ffffffad), url('/public/img/home_page/word_contact.png');
+    }
+
+    .links {
+        width: 75vw;
+        display: flex;
+         justify-content: flex-start;
+
+            @media only screen and (max-width: 1500px) {
+                width: 95vw;
+            }
+
+            @media only screen and (max-width: 585px) {
+                width: 99vw;
+            }
+
+        ul{
+            margin: 0;
+            padding: 1rem;
+            
+            h3 {
+                font-weight: bold;
+                font-size: xx-large;
+                margin-bottom: 2rem;
+                background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 20%, rgba(19,107,188,1) 49%, rgba(22,144,209,1) 59%, rgba(0,32,36,1) 100%);
+                background-clip: text;
+                color: transparent;
+                width: min-content;
+
+                @media only screen and (max-width: 768px) {
+                    font-size: x-large;
+                }
+            }
+
+            li{
+                list-style: none;
+                font-size: large;
+                display: flex;
+                 flex-direction: row;
+                margin: .5rem;
+                
+                p {
+                    margin: 0;
+                }
+
+                @media only screen and (max-width: 768px) {
+                    font-size: medium;
+                }
+
+                @media only screen and (max-width: 425px) {
+                    font-size: normal;
+                }
+
+                img {
+                    width: 25px;
+                    margin-right: 1.5rem;
+
+                    @media only screen and (max-width: 425px) {
+                        width: 20px;
+                    }
+                }
+            }
+
+            .contact_form_btn {
+                width: 20rem;
+                height: 2.5rem;
+                border: 0;
+                border-radius: 15px;
+                background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 20%, rgba(17,83,143,1) 49%, rgba(9,9,121,1) 59%, rgba(0,32,36,1) 100%);
+                color: white;
+                font-weight: bold;
+                display: flex;
+                 flex-direction: row;
+                 justify-content: flex-start;
+                 align-items: center;
+
+                @media only screen and (max-width: 320px) {
+                    width: 18rem;
+                    font-weight: normal;
+                }
+
+                img {
+                    width: 26px;
+                    margin-left: .5rem;
+                    margin-right: 1.3rem;
+                }
+
+            }
+            
+        }
+    }
 }
