--- a/src/css/main.css
+++ b/src/css/main.css
@@ -5,8 +5,8 @@
   font-family: "Montserrat", sans-serif; }
 
 #home_header {
-  width: 100vw;
-  height: 25vh;
+  width: 99vw;
+  height: 20vh;
   display: flex;
   align-items: center;
   background: linear-gradient(to top, #ffffffcb, #ffffffcb), url("/public/img/home_page/top_background.jpg");
@@ -16,12 +16,12 @@
     #home_header {
       height: 20vh; } }
 
-#bussines_unit {
-  width: 100w;
+#bussines_units {
+  width: 99w;
   min-height: 20rem;
   display: flex;
   justify-content: center; }
-  #bussines_unit #banner {
+  #bussines_units #banner {
     width: 75vw;
     margin: 2rem;
     padding: 1rem;
@@ -36,47 +36,50 @@
     background-size: 12rem;
     box-shadow: 0px 0px 13px 0px #000000bf; }
     @media only screen and (max-width: 1500px) {
-      #bussines_unit #banner {
+      #bussines_units #banner {
         width: 95vw;
         padding: 1rem; } }
     @media only screen and (max-width: 768px) {
-      #bussines_unit #banner {
-        width: 100vw;
+      #bussines_units #banner {
+        width: 99vw;
         margin: .5rem; } }
     @media only screen and (max-width: 720px) {
-      #bussines_unit #banner {
+      #bussines_units #banner {
         flex-direction: column; } }
-    #bussines_unit #banner .intro {
+    #bussines_units #banner .intro {
       width: 65%;
       height: 100%;
       padding: 1rem; }
       @media only screen and (max-width: 1500px) {
-        #bussines_unit #banner .intro {
+        #bussines_units #banner .intro {
           width: 60%; } }
       @media only screen and (max-width: 768px) {
-        #bussines_unit #banner .intro {
+        #bussines_units #banner .intro {
           width: 60%; } }
       @media only screen and (max-width: 720px) {
-        #bussines_unit #banner .intro {
+        #bussines_units #banner .intro {
           width: 90%; } }
       @media only screen and (max-width: 425px) {
-        #bussines_unit #banner .intro {
+        #bussines_units #banner .intro {
           padding: 0; } }
-    #bussines_unit #banner .card_container {
+      @media only screen and (max-width: 928px) {
+        #bussines_units #banner .intro .secondary_p {
+          display: none; } }
+    #bussines_units #banner .card_container {
       width: auto;
       display: flex;
       flex-direction: column; }
       @media only screen and (max-width: 720px) {
-        #bussines_unit #banner .card_container {
+        #bussines_units #banner .card_container {
           flex-direction: row; } }
       @media only screen and (max-width: 585px) {
-        #bussines_unit #banner .card_container {
+        #bussines_units #banner .card_container {
           flex-direction: column; } }
-      #bussines_unit #banner .card_container .row {
+      #bussines_units #banner .card_container .row {
         justify-content: flex-end;
         margin: 0;
         padding: 0; }
-        #bussines_unit #banner .card_container .row .unit_card {
+        #bussines_units #banner .card_container .row .unit_card {
           margin: .2rem;
           width: 10rem;
           height: 10rem;
@@ -84,26 +87,111 @@
           flex-direction: column;
           justify-content: center;
           align-items: center; }
-          @media only screen and (max-width: 922px) {
-            #bussines_unit #banner .card_container .row .unit_card {
+          @media only screen and (max-width: 928px) {
+            #bussines_units #banner .card_container .row .unit_card {
               width: 8rem;
               height: 8rem; } }
-          #bussines_unit #banner .card_container .row .unit_card img {
+          #bussines_units #banner .card_container .row .unit_card img {
             width: 4rem;
             height: 3.5rem;
             margin-bottom: 1rem; }
-          #bussines_unit #banner .card_container .row .unit_card h2 {
+          #bussines_units #banner .card_container .row .unit_card h2 {
             font-size: 1.2rem;
             padding: 0;
             margin: 0; }
-        #bussines_unit #banner .card_container .row .Eduactivo {
+        #bussines_units #banner .card_container .row .Eduactivo {
           background-color: #F19C1D; }
-        #bussines_unit #banner .card_container .row .Industrial {
+        #bussines_units #banner .card_container .row .Industrial {
           background-color: #0098DA; }
-        #bussines_unit #banner .card_container .row .RSE {
+        #bussines_units #banner .card_container .row .RSE {
           background-color: #00B25D; }
-        #bussines_unit #banner .card_container .row .GovTech {
+        #bussines_units #banner .card_container .row .GovTech {
           background-color: #3f3e3e; }
+
+.home_page_contact {
+  width: 99vw;
+  height: 30rem;
+  margin-top: 2rem;
+  display: flex;
+  justify-content: center;
+  background: url("/public/img/home_page/word_contact.png");
+  background-repeat: no-repeat;
+  background-position: right;
+  background-size: contain; }
+  @media only screen and (max-width: 928px) {
+    .home_page_contact {
+      height: 25rem; } }
+  @media only screen and (max-width: 720px) {
+    .home_page_contact {
+      height: 20rem;
+      background-size: 15rem; } }
+  @media only screen and (max-width: 575px) {
+    .home_page_contact {
+      background: linear-gradient(to bottom, #fffffff1, #ffffffad), url("/public/img/home_page/word_contact.png"); } }
+  .home_page_contact .links {
+    width: 75vw;
+    display: flex;
+    justify-content: flex-start; }
+    @media only screen and (max-width: 1500px) {
+      .home_page_contact .links {
+        width: 95vw; } }
+    @media only screen and (max-width: 585px) {
+      .home_page_contact .links {
+        width: 99vw; } }
+    .home_page_contact .links ul {
+      margin: 0;
+      padding: 1rem; }
+      .home_page_contact .links ul h3 {
+        font-weight: bold;
+        font-size: xx-large;
+        margin-bottom: 2rem;
+        background: linear-gradient(90deg, #020024 0%, #090979 20%, #136bbc 49%, #1690d1 59%, #002024 100%);
+        background-clip: text;
+        color: transparent;
+        width: min-content; }
+        @media only screen and (max-width: 768px) {
+          .home_page_contact .links ul h3 {
+            font-size: x-large; } }
+      .home_page_contact .links ul li {
+        list-style: none;
+        font-size: large;
+        display: flex;
+        flex-direction: row;
+        margin: .5rem; }
+        .home_page_contact .links ul li p {
+          margin: 0; }
+        @media only screen and (max-width: 768px) {
+          .home_page_contact .links ul li {
+            font-size: medium; } }
+        @media only screen and (max-width: 425px) {
+          .home_page_contact .links ul li {
+            font-size: normal; } }
+        .home_page_contact .links ul li img {
+          width: 25px;
+          margin-right: 1.5rem; }
+          @media only screen and (max-width: 425px) {
+            .home_page_contact .links ul li img {
+              width: 20px; } }
+      .home_page_contact .links ul .contact_form_btn {
+        width: 20rem;
+        height: 2.5rem;
+        border: 0;
+        border-radius: 15px;
+        background: linear-gradient(90deg, #020024 0%, #090979 20%, #11538f 49%, #090979 59%, #002024 100%);
+        color: white;
+        font-weight: bold;
+        display: flex;
+        flex-direction: row;
+        justify-content: flex-start;
+        align-items: center; }
+        @media only screen and (max-width: 320px) {
+          .home_page_contact .links ul .contact_form_btn {
+            width: 18rem;
+            font-weight: normal; } }
+        .home_page_contact .links ul .contact_form_btn img {
+          width: 26px;
+          margin-left: .5rem;
+          margin-right: 1.3rem; }
 
 .logo_container .ruf_logo {
   width: 16rem;
