--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -5,3 +5,5 @@
 // Components
 @import '../components/home/home';
 @import '../components/RUF_logo/ruf_logo';
+@import '../components/Navbar/navbar';
+@import '../components/Educativo/educativo';
