--- a/src/components/RUF_logo/_ruf_logo.scss
+++ b/src/components/RUF_logo/_ruf_logo.scss
@@ -1,31 +1,36 @@
 .logo_container {
-    .ruf_logo {
-        width: 16rem;
-        margin-top: 2rem;
+    width: 23.5rem;
+    display: flex;
+     flex-direction: column;
+
+     .ruf_logo {
+        width: 10rem;
+        margin-top: 1rem;
         margin-left: 5rem;
         display: flex;
             flex-direction: column;
     
         @media only screen and (max-width: 920px) {
-            width: 14rem;
             margin-left: 4rem;
         }
     
         @media only screen and (max-width: 720px) {
-            width: 12rem;
             margin-left: 2rem;
         }
     
         @media only screen and (max-width: 425px) {
-            width: 10rem;
+            width: 8rem;
         }
     }
 
     .hide_initials {
+        width: fit-content;
+        font-size: small;
         color: #ffffff00;
+        margin: 0;
         margin-left: 5rem;
-        margin-top: .5rem;
-        transition: .8s;
+        padding-top: .5rem;
+        transition: .6s;
 
         @media only screen and (max-width: 920px) {
             font-size: small;
@@ -39,9 +44,11 @@
     }
 
     .initials_enter {
+        width: fit-content;
+        font-size: small;
+        margin: 0;
         margin-left: 5rem;
-        font-weight: bold;
-        margin-top: .5rem;
+        padding-top: .5rem;
 
         @media only screen and (max-width: 920px) {
             font-size: small;
