--- a/src/css/main.css
+++ b/src/css/main.css
@@ -90,6 +90,8 @@
           width: 10rem;
           height: 10rem;
           display: flex;
+          text-decoration: none;
+          color: white;
           flex-direction: column;
           justify-content: center;
           align-items: center; }
@@ -105,7 +107,7 @@
             font-size: 1.2rem;
             padding: 0;
             margin: 0; }
-        #bussines_units #banner .card_container .row .Eduactivo {
+        #bussines_units #banner .card_container .row .Educativo {
           background-color: #F19C1D; }
         #bussines_units #banner .card_container .row .Industrial {
           background-color: #0098DA; }
