--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -7,3 +7,4 @@
 @import '../components/RUF_logo/ruf_logo';
 @import '../components/Navbar/navbar';
 @import '../components/Educativo/educativo';
+@import '../components/Contact_card/contact_card';
