--- a/src/components/Educativo/_educativo.scss
+++ b/src/components/Educativo/_educativo.scss
@@ -36,120 +36,126 @@ $desc_header_width: 99vw - $img_header_width;
             };
         }
     }
-}
-
-.products {
-    height: 40vw;
-    width: 99vw;
-    display: flex;
-     flex-direction: column;
-     justify-content: center;
-     align-items: center;
-    background: linear-gradient(24deg, rgba(225,141,50,1) 0%, rgba(238,192,142,1) 10%, rgba(243,211,175,1) 20%, rgba(250,236,221,1) 28%, rgba(255,255,255,1) 39%, rgba(255,255,255,1) 61%, rgba(214,250,255,1) 72%, rgba(195,248,255,1) 82%, rgba(179,246,255,1) 89%, rgba(149,242,255,1) 97%, rgba(149,242,255,1) 100%);
-
-    .description {
-        text-align: center;
-        width: 50%;
-
-        h2 {
-            margin-bottom: 2rem;
-        }
-
-        p {
-            margin-bottom: 2rem;
-            font-size: large
-        };
-    }
-
-    .card_container {
-        display: flex;
-        flex-direction: row;
-        
-        .product_card {
-            color: white;
-            display: flex;
-             flex-direction: column;
-             align-items: center;
-             justify-content: center;
-            width: 20rem;
-            height: 12rem;
-            text-align: center;
-            border-radius: 40px;
-            margin-right: 2rem;
-            &:last-child{
-                margin-right: 0;
-            }
     
-            h3 {
-                font-weight: bold;
-                font-size: x-large;
-            }
-    
-            img {
-                width: 80px;
-            }
-        }
-    
-        .black {
-            background-color: #2F2F2F;
-        }
-    
-        .orange {
-            background-color: #FF9900;
-        }
-    }
-}
-
-.info_container {
-    width: 99vw;
-    height: 100vh;
-    position: relative;
-    font-size: large;
-    background: url('/public/img/educativo/node_background.png');
-     background-repeat: no-repeat;
-     background-position: left bottom;
-     background-size: 40%;
-     
-    .check_list {
-        position: absolute;
+    .products {
+        height: 40vw;
         width: 99vw;
-        left: 0;
-        right: 0;
-        top: -50px;
-        margin: auto;
         display: flex;
+         flex-direction: column;
          justify-content: center;
          align-items: center;
-         flex-direction: column;
-        
-        img {
-            width: 45rem;
-            border-radius: 30px;
-        }
-
-        h4 {
-            margin: 1.5rem;
-            font-weight: bold;
-        }
-
-        .sec_description {
-            width: 50%;
+        background: linear-gradient(75deg, rgba(225,141,50,1) 0%, rgba(238,192,142,1) 10%, rgba(243,211,175,1) 20%, rgba(250,236,221,1) 28%, rgba(255,255,255,1) 42%, rgba(255,255,255,1) 56%, rgba(214,250,255,1) 72%, rgba(195,248,255,1) 82%, rgba(179,246,255,1) 89%, rgba(149,242,255,1) 97%, rgba(149,242,255,1) 100%);
+    
+    
+        .description {
             text-align: center;
+            width: 50%;
+    
+            h2 {
+                margin-bottom: 2rem;
+            }
+    
+            p {
+                margin-bottom: 2rem;
+                font-size: large
+            };
         }
-
-        ul {
-            margin-top: 2rem;
-
-            li {
-                list-style: none;
+    
+        .card_container {
+            display: flex;
+            flex-direction: row;
+            
+            .product_card {
+                color: white;
                 display: flex;
+                 flex-direction: column;
                  align-items: center;
-
-                .check_icon {
-                    width: 30px;
-                    margin-right: 1.5rem;
+                 justify-content: center;
+                width: 20rem;
+                height: 12rem;
+                text-align: center;
+                border-radius: 40px;
+                margin-right: 2rem;
+                &:last-child{
+                    margin-right: 0;
+                }
+        
+                h3 {
+                    font-weight: bold;
+                    font-size: x-large;
+                }
+        
+                img {
+                    width: 80px;
+                }
+            }
+        
+            .black {
+                background-color: #2F2F2F;
+            }
+        
+            .orange {
+                background-color: #FF9900;
+            }
+        }
+    }
+    
+    .info_container {
+        width: 99vw;
+        height: 100vh;
+        position: relative;
+        font-size: large;
+        background: url('/public/img/educativo/node_background.png');
+         background-repeat: no-repeat;
+         background-position: left bottom;
+         background-size: 40%;
+         
+        .check_list {
+            position: absolute;
+            width: 99vw;
+            left: 0;
+            right: 0;
+            top: -50px;
+            margin: auto;
+            display: flex;
+             justify-content: center;
+             align-items: center;
+             flex-direction: column;
+            
+            img {
+                width: 45rem;
+                border-radius: 30px;
+            }
+    
+            h4 {
+                margin: 1.5rem;
+                font-weight: bold;
+            }
+    
+            .sec_description {
+                width: 50%;
+                text-align: center;
+            }
+    
+            ul {
+                margin-top: 2rem;
+    
+                li {
+                    list-style: none;
+                    display: flex;
+                     align-items: center;
+    
+                    .check_icon {
+                        width: 30px;
+                        margin-right: 1.5rem;
+                    }
                 }
             }
         }
+    }
+
+    .contact {
+        padding-bottom: 6rem;
+        background: linear-gradient(145deg, rgba(255,255,255,1) 73%, rgba(52,52,52,1) 73%);
     }
 }
