--- a/src/components/Educativo/_educativo.scss
+++ b/src/components/Educativo/_educativo.scss
@@ -3,40 +3,41 @@ $desc_header_width: 99vw - $img_header_width;
 
 #educativo {
     .header_educativo {
-        height: 50vh;
+        height: 600px;
         display: flex;
          flex-direction: row;
 
         .header_pic {
+            width: $img_header_width;
             background: url('/public//img/educativo/ruf_educativo_header.jpg');
-             background-position: center;
              background-repeat: no-repeat;
              background-size: cover;
-            width: $img_header_width;
+             background-position: center;
         }
 
         .header_description {
-            background-color: #FF9900;
-            text-align: center;
             width: $desc_header_width;
-            color: white;
+            text-align: center;
+            padding: 3rem;
             display: flex;
-             justify-content: center;
              flex-direction: column;
+             justify-content: center;
              align-items: center;
-
+            background-color: #FF9900;
+            color: white;
+            
             h1 {
-                margin-bottom: 3rem;
+                font-weight: bold;
                 font-size: xx-large;
+                margin-bottom: 2rem;
             }
 
             p {
-                width: 70%;
-                font-size: large
-            };
+                font-size: large;
+            }
         }
     }
-    
+
     .products {
         height: 40vw;
         width: 99vw;
@@ -44,27 +45,29 @@ $desc_header_width: 99vw - $img_header_width;
          flex-direction: column;
          justify-content: center;
          align-items: center;
-        background: linear-gradient(75deg, rgba(225,141,50,1) 0%, rgba(238,192,142,1) 10%, rgba(243,211,175,1) 20%, rgba(250,236,221,1) 28%, rgba(255,255,255,1) 42%, rgba(255,255,255,1) 56%, rgba(214,250,255,1) 72%, rgba(195,248,255,1) 82%, rgba(179,246,255,1) 89%, rgba(149,242,255,1) 97%, rgba(149,242,255,1) 100%);
-    
-    
+        background: linear-gradient(75deg, rgba(225, 141, 50, 1) 0%, rgba(238, 192, 142, 1) 10%, rgba(243, 211, 175, 1) 20%, rgba(250, 236, 221, 1) 28%, rgba(255, 255, 255, 1) 42%, rgba(255, 255, 255, 1) 56%, rgba(214, 250, 255, 1) 72%, rgba(195, 248, 255, 1) 82%, rgba(179, 246, 255, 1) 89%, rgba(149, 242, 255, 1) 97%, rgba(149, 242, 255, 1) 100%);
+
+
         .description {
             text-align: center;
             width: 50%;
-    
+
             h2 {
                 margin-bottom: 2rem;
             }
-    
+
             p {
                 margin-bottom: 2rem;
                 font-size: large
-            };
+            }
+
+            ;
         }
-    
+
         .card_container {
             display: flex;
             flex-direction: row;
-            
+
             .product_card {
                 color: white;
                 display: flex;
@@ -76,24 +79,25 @@ $desc_header_width: 99vw - $img_header_width;
                 text-align: center;
                 border-radius: 40px;
                 margin-right: 2rem;
-                &:last-child{
+
+                &:last-child {
                     margin-right: 0;
                 }
-        
+
                 h3 {
                     font-weight: bold;
                     font-size: x-large;
                 }
-        
+
                 img {
                     width: 80px;
                 }
             }
-        
+
             .black {
                 background-color: #2F2F2F;
             }
-        
+
             .orange {
                 background-color: #FF9900;
             }
@@ -102,8 +106,7 @@ $desc_header_width: 99vw - $img_header_width;
     
     .info_container {
         width: 99vw;
-        height: 100vh;
-        position: relative;
+        // position: relative;
         font-size: large;
         background: url('/public/img/educativo/node_background.png');
          background-repeat: no-repeat;
@@ -111,20 +114,31 @@ $desc_header_width: 99vw - $img_header_width;
          background-size: 40%;
          
         .check_list {
-            position: absolute;
-            width: 99vw;
-            left: 0;
-            right: 0;
-            top: -50px;
             margin: auto;
             display: flex;
              justify-content: center;
              align-items: center;
              flex-direction: column;
             
-            img {
+            .container {
+                width: 99vw;
+                height: 32rem;
+            }
+            
+            .img_container {
+                position: relative;
                 width: 45rem;
-                border-radius: 30px;
+                height: 45rem;
+                height: max-content;
+
+                img {
+                    width: 45rem;
+                    border-radius: 30px;
+                    position: absolute;
+                     left: 0;
+                     right: 0;
+                     top: -580px;
+                }
             }
     
             h4 {
@@ -152,10 +166,5 @@ $desc_header_width: 99vw - $img_header_width;
                 }
             }
         }
-    }
-
-    .contact {
-        padding-bottom: 6rem;
-        background: linear-gradient(145deg, rgba(255,255,255,1) 73%, rgba(52,52,52,1) 73%);
     }
 }
